--- a/08 Timeline.css
+++ b/08 Timeline.css
@@ -29,18 +29,19 @@
 
 .TimelineNode {
     background-color: #ff7988;
-    width: 1.5rem;
-    margin: 0 auto; 
+    border: 1.2rem solid white;
+    border-top: none;
+    border-bottom: none;
 }
 
 .TimelineNodeDot {
-    font-size: 2rem;
-    text-align: center;
-    -webkit-text-stroke-width: 1rem;
-    -webkit-text-stroke-color: #EF233C;
+    width: 3.5rem;
+    line-height: normal;
+    display: inline-block;
+    vertical-align: middle;
     position: relative;
-    right: 70%;
-    top: 20%;
+    right: 0.9rem;
+    bottom: 0.2rem;
 }
 
 .TimelineImage {
