--- a/09 Star Stories.css
+++ b/09 Star Stories.css
@@ -14,7 +14,7 @@
     grid-template-columns: 2fr 3fr;
     gap: 2rem;
     padding: 2rem;
-    background-color: #f0fbff;
+    background-color: #ebfaff;
 }
 
 .StarStoriesButton {
