--- a/08 Timeline.css
+++ b/08 Timeline.css
@@ -1,3 +1,24 @@
+@media only screen and (max-width: 900px) {
+    .TimelineDesktop {
+        display: none !important;
+    }
+}
+
+@media only screen and (min-width: 900px) {
+    .TimelineMobile {
+        display: none !important;
+    }
+}
+
+@media only screen and (max-width: 900px) and (min-width: 600px) {
+    .TimelineImage {
+        width: 60% !important;
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+    }
+}
+
 .TimelineFrame {
     display: grid;
     grid-template-columns: 2fr 2fr 4rem 2fr 2fr;
@@ -5,6 +26,12 @@
     width: 90%;
     margin-left: auto;
     margin-right: auto;
+}
+
+.TimelineFrameMobile {
+    margin-top: 3rem;
+    margin-left: 3rem;
+    margin-right: 3rem;
 }
 
 .TimelineHeader {
@@ -25,6 +52,10 @@
 
 .TimelineContent.left {
     text-align: left;
+}
+
+.TimelineContent.center {
+    text-align: center;
 }
 
 .TimelineNode {
