--- a/08 Timeline.css
+++ b/08 Timeline.css
@@ -37,7 +37,7 @@
 .TimelineHeader {
     font-size: 2rem;
     text-align: right;
-    color: #EF233C;
+    color: #ef233c;
     font-weight: bold;
     margin-bottom: 1rem;
 }
@@ -82,8 +82,7 @@
 }
 
 .StupidRectangle {
-    
-    color: rgba(0,0,0,0);
+    color: rgba(0, 0, 0, 0);
     height: 5000%;
     width: 50%;
     margin-left: auto;
