--- a/02 NavBar.css
+++ b/02 NavBar.css
@@ -5,7 +5,8 @@
     padding-left: 3rem;
     padding-right: 3rem;
     font-size: 1.5rem;
-    font-family: 'Baskerville', 'Cambria', 'Cochin', 'Georgia', 'Times', 'Times New Roman', serif;
+    font-family: "Baskerville", "Cambria", "Cochin", "Georgia", "Times",
+        "Times New Roman", serif;
     text-align: right;
     top: 0;
     left: 0;
@@ -72,7 +73,8 @@
     right: 1rem;
     color: white;
     font-size: 1.5rem;
-    font-family: 'Baskerville', 'Cambria', 'Cochin', 'Georgia', 'Times', 'Times New Roman', serif;
+    font-family: "Baskerville", "Cambria", "Cochin", "Georgia", "Times",
+        "Times New Roman", serif;
     z-index: 998;
     background-color: #2b2d42;
     text-align: right;
