--- a/03 HeroBanner.css
+++ b/03 HeroBanner.css
@@ -20,7 +20,8 @@
     left: 10%;
     width: 80%;
     text-shadow: 0 0 0.5rem rgba(255, 255, 255, 1);
-    font-family: 'Baskerville', 'Cambria', 'Cochin', 'Georgia', 'Times', 'Times New Roman', serif;
+    font-family: "Baskerville", "Cambria", "Cochin", "Georgia", "Times",
+        "Times New Roman", serif;
 }
 
 .HeroHeader.alt {
