--- a/04 Persona.css
+++ b/04 Persona.css
@@ -25,7 +25,7 @@
 }
 
 .PersonaButton:hover {
-    background-color: #EF233C;
+    background-color: #ef233c;
 }
 
 .PersonaButton > text {
@@ -43,7 +43,7 @@
 
 @media only screen and (max-width: 550px) {
     .PersonaFrame {
-        grid-template-columns: 5% 1fr 0 1fr 1fr 1fr 5%
+        grid-template-columns: 5% 1fr 0 1fr 1fr 1fr 5%;
     }
 
     .PersonaButton {
