--- a/09 Star Stories.css
+++ b/09 Star Stories.css
@@ -28,7 +28,6 @@
         height: 1.5rem !important;
         font-size: 1rem !important;
     }
-
 }
 
 .StarStoriesFrame {
@@ -49,7 +48,7 @@
 }
 
 .StarStoriesButton {
-    background-color: #EF233C;
+    background-color: #ef233c;
     color: white;
     border-radius: 1000rem;
     text-align: center;
@@ -62,7 +61,7 @@
 }
 
 .StarStoriesButton:hover {
-    color: #EF233C;
+    color: #ef233c;
     background-color: white;
     font-weight: bold;
     scale: 2;
@@ -81,7 +80,8 @@
 .StarStoriesHeader {
     font-size: 1.5rem;
     font-weight: bold;
-    font-family: 'Baskerville', 'Cambria', 'Cochin', 'Georgia', 'Times', 'Times New Roman', serif;
+    font-family: "Baskerville", "Cambria", "Cochin", "Georgia", "Times",
+        "Times New Roman", serif;
 }
 
 .StarStoriesEnterButton {
@@ -97,5 +97,5 @@
 }
 
 .StarStoriesEnterButton:hover {
-    background-color: #EF233C;
+    background-color: #ef233c;
 }
