--- a/10 Star Story Singular.css
+++ b/10 Star Story Singular.css
@@ -62,7 +62,8 @@
     text-shadow: 0 0 0.5rem rgba(255, 255, 255, 1);
     text-transform: uppercase;
     letter-spacing: 0.5rem;
-    font-family: 'Baskerville', 'Cambria', 'Cochin', 'Georgia', 'Times', 'Times New Roman', serif;
+    font-family: "Baskerville", "Cambria", "Cochin", "Georgia", "Times",
+        "Times New Roman", serif;
 }
 
 .SSSHeroSubheader {
@@ -86,13 +87,13 @@
     }
 }
 
-@media only screen and (max-width: 700px){
-    .SSSHeroHeader{
+@media only screen and (max-width: 700px) {
+    .SSSHeroHeader {
         left: 2rem;
         font-size: 1.5rem;
     }
 
-    .SSSHeroSubheader{
+    .SSSHeroSubheader {
         left: 2rem;
         font-size: 1rem;
     }
@@ -122,7 +123,8 @@
     text-align: center;
     padding: 0rem 1rem;
     box-sizing: border-box;
-    font-family: 'Baskerville', 'Cambria', 'Cochin', 'Georgia', 'Times', 'Times New Roman', serif;
+    font-family: "Baskerville", "Cambria", "Cochin", "Georgia", "Times",
+        "Times New Roman", serif;
 }
 
 .SSSRankSubheader {
@@ -160,7 +162,7 @@
 }
 
 .SSSReturnButton:hover {
-    background-color: #EF233C;
+    background-color: #ef233c;
 }
 
 .SSSArticleFrame {
